--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -830,42 +830,42 @@
             "tech": "tech"
         },
         "map-styles": {
-            "dance": "dance",
+            "dance": "danse",
             "swing": "swing",
             "nightcore": "nightcore",
-            "folk": "folk",
-            "family": "famille",
-            "ambient": "ambiante",
-            "funk": "funk",
+            "folk-acoustic": "folk & acoustique",
+            "kids-family": "enfants & famille",
+            "ambient": "ambiant",
+            "funk-disco": "funk & disco",
             "jazz": "jazz",
             "soul": "soul",
             "speedcore": "speedcore",
             "punk": "punk",
             "rb": "r&b",
-            "holiday": "vacance",
+            "holiday": "vacances",
             "vocaloid": "vocaloid",
             "j-rock": "j-rock",
             "trance": "trance",
-            "drumbass": "drum & bass",
-            "comedy": "comédie",
+            "drum-and-bass": "drum & bass",
+            "comedy-meme": "comédie & meme",
             "instrumental": "instrumental",
             "hardcore": "hardcore",
             "k-pop": "k-pop",
-            "indie": "indé",
+            "indie": "indie",
             "techno": "techno",
             "house": "house",
-            "game": "jeu vidéo",
-            "film": "film",
-            "alt": "alternative",
+            "video-game-soundtrack": "jeu vidéo",
+            "tv-movie-soundtrack": "TV & film",
+            "alternative": "alternatif",
             "dubstep": "dubstep",
-            "metal": "metal",
+            "metal": "métal",
             "anime": "anime",
-            "hiphop": "hiphop",
+            "hip-hop-rap": "hip hop & rap",
             "j-pop": "j-pop",
             "rock": "rock",
             "pop": "pop",
             "electronic": "électronique",
-            "classical-orchestral": "classique & orchestrale"
+            "classical-orchestral": "Classique & Orchestral"
         },
         "map-specificities": {
             "automapper": "IA",
