--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -831,36 +831,36 @@
             "dance": "танец",
             "swing": "свинг",
             "nightcore": "найткор",
-            "folk": "народные",
-            "family": "семейные",
+            "folk-acoustic": "фолк и акустика",
+            "kids-family": "дети и семья",
             "ambient": "эмбиент",
-            "funk": "фанк",
+            "funk-disco": "фанк и диско",
             "jazz": "джаз",
             "soul": "соул",
             "speedcore": "спидкор",
             "punk": "панк",
-            "rb": "ар-н-би",
-            "holiday": "праздник",
-            "vocaloid": "вокалоиды",
+            "rb": "r&b",
+            "holiday": "праздники",
+            "vocaloid": "вокалоид",
             "j-rock": "джей-рок",
             "trance": "транс",
-            "drumbass": "драм-н-бейс",
-            "comedy": "комедия",
-            "instrumental": "инструментальные",
+            "drum-and-bass": "драм-н-бейс",
+            "comedy-meme": "комедия и мемы",
+            "instrumental": "инструментал",
             "hardcore": "хардкор",
-            "k-pop": "кей-поп",
+            "k-pop": "k-pop",
             "indie": "инди",
             "techno": "техно",
             "house": "хаус",
-            "game": "видеоигры",
-            "film": "фильмы",
-            "alt": "альтернативные",
-            "dubstep": "дапстеп",
+            "video-game-soundtrack": "видеоигра",
+            "tv-movie-soundtrack": "ТВ и кино",
+            "alternative": "альтернатива",
+            "dubstep": "дабстеп",
             "metal": "метал",
             "anime": "аниме",
-            "hiphop": "хипхоп",
-            "j-pop": "джей-поп",
-            "rock": "прк",
+            "hip-hop-rap": "хип-хоп и рэп",
+            "j-pop": "j-pop",
+            "rock": "рок",
             "pop": "поп",
             "electronic": "электроника",
             "classical-orchestral": "Классика и Оркестр"
