--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -829,42 +829,42 @@
             "tech": "技術"
         },
         "map-styles": {
-            "dance": "Dance",
-            "swing": "Swing",
-            "nightcore": "Nightcore",
-            "folk": "Folk",
-            "family": "Family",
-            "ambient": "Ambient",
-            "funk": "Funk",
-            "jazz": "Jazz",
-            "soul": "Soul",
-            "speedcore": "Speedcore",
-            "punk": "Punk",
-            "rb": "R&B",
-            "holiday": "Holiday",
-            "vocaloid": "Vocaloid",
-            "j-rock": "J-rock",
-            "trance": "Trance",
-            "drumbass": "Drum & Bass",
-            "comedy": "Comedy",
-            "instrumental": "Instrumental",
-            "hardcore": "Hardcore",
-            "k-pop": "K-pop",
-            "indie": "Indie",
-            "techno": "Techno",
-            "house": "House",
-            "game": "Video game",
-            "film": "Film",
-            "alt": "Alternative",
-            "dubstep": "Dubstep",
-            "metal": "Metal",
-            "anime": "Anime",
-            "hiphop": "Hiphop",
-            "j-pop": "J-pop",
-            "rock": "Rock",
-            "pop": "Pop",
-            "electronic": "Electronic",
-            "classical-orchestral": "Classical & Orchestral"
+            "dance": "舞蹈",
+            "swing": "搖擺",
+            "nightcore": "夜核",
+            "folk-acoustic": "民謠 & 原聲",
+            "kids-family": "兒童 & 家庭",
+            "ambient": "氛圍音樂",
+            "funk-disco": "放克 & 迪斯科",
+            "jazz": "爵士",
+            "soul": "靈魂",
+            "speedcore": "極速核",
+            "punk": "龐克",
+            "rb": "r&b",
+            "holiday": "假日",
+            "vocaloid": "聲庫",
+            "j-rock": "日式搖滾",
+            "trance": "迷幻",
+            "drum-and-bass": "鼓 & 貝斯",
+            "comedy-meme": "喜劇 & 表情包",
+            "instrumental": "純音樂",
+            "hardcore": "硬核",
+            "k-pop": "k-pop",
+            "indie": "獨立",
+            "techno": "電子舞曲",
+            "house": "浩室音樂",
+            "video-game-soundtrack": "遊戲音樂",
+            "tv-movie-soundtrack": "電視 & 電影",
+            "alternative": "另類",
+            "dubstep": "電音鼓",
+            "metal": "金屬",
+            "anime": "動漫",
+            "hip-hop-rap": "嘻哈 & 說唱",
+            "j-pop": "日式流行",
+            "rock": "搖滾",
+            "pop": "流行",
+            "electronic": "電子",
+            "classical-orchestral": "古典 & 管弦樂"
         },
         "map-specificities": {
             "automapper": "AI",
