--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -840,10 +840,10 @@
             "dance": "dance",
             "swing": "swing",
             "nightcore": "nightcore",
-            "folk": "folk",
-            "family": "family",
+            "folk-acoustic": "folk & acoustic",
+            "kids-family": "kids & family",
             "ambient": "ambient",
-            "funk": "funk",
+            "funk-disco": "funk & disco",
             "jazz": "jazz",
             "soul": "soul",
             "speedcore": "speedcore",
@@ -853,21 +853,21 @@
             "vocaloid": "vocaloid",
             "j-rock": "j-rock",
             "trance": "trance",
-            "drumbass": "drum & bass",
-            "comedy": "comedy",
+            "drum-and-bass": "drum & bass",
+            "comedy-meme": "comedy & meme",
             "instrumental": "instrumental",
             "hardcore": "hardcore",
             "k-pop": "k-pop",
             "indie": "indie",
             "techno": "techno",
             "house": "house",
-            "game": "video game",
-            "film": "film",
-            "alt": "alternative",
+            "video-game-soundtrack": "video game",
+            "tv-movie-soundtrack": "TV & film",
+            "alternative": "alternative",
             "dubstep": "dubstep",
             "metal": "metal",
             "anime": "anime",
-            "hiphop": "hiphop",
+            "hip-hop-rap": "hip hop & rap",
             "j-pop": "j-pop",
             "rock": "rock",
             "pop": "pop",
