--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -839,7 +839,8 @@
             "tags": "tags",
             "specificities": "general",
             "requirements": "requirements",
-            "exclude": "exclude"
+            "exclude": "exclude",
+            "leaderboard": "leaderboard"
         },
         "map-types": {
             "accuracy": "accuracy",
@@ -894,6 +895,12 @@
             "curated": "curated",
             "verified": "verified",
             "fullSpread": "full spread"
+        },
+        "map-leaderboard": {
+            "All": "All",
+            "Ranked": "Ranked",
+            "BeatLeader": "BeatLeader",
+            "ScoreSaber": "ScoreSaber"
         },
         "map-excludes": {
             "installed": "installed"
