--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -831,7 +831,8 @@
             "tags": "тэги",
             "specificities": "основное",
             "requirements": "требуемые моды",
-            "exclude": "исключить"
+            "exclude": "исключить",
+            "leaderboard": "leaderboard"
         },
         "map-types": {
             "accuracy": "точность",
@@ -886,6 +887,12 @@
             "curated": "оценённые куратором",
             "verified": "проверенные авторы",
             "fullSpread": "полный набор"
+        },
+        "map-leaderboard": {
+            "All": "All",
+            "Ranked": "Ranked",
+            "BeatLeader": "BeatLeader",
+            "ScoreSaber": "ScoreSaber"
         },
         "map-excludes": {
             "installed": "установленный"
