--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -832,7 +832,8 @@
             "tags": "標籤",
             "specificities": "general",
             "requirements": "要求",
-            "exclude": "排除"
+            "exclude": "排除",
+            "leaderboard": "leaderboard"
         },
         "map-types": {
             "accuracy": "精確度",
@@ -887,6 +888,12 @@
             "curated": "Curated",
             "verified": "Verified",
             "fullSpread": "Full spread"
+        },
+        "map-leaderboard": {
+            "All": "All",
+            "Ranked": "Ranked",
+            "BeatLeader": "BeatLeader",
+            "ScoreSaber": "ScoreSaber"
         },
         "map-excludes": {
             "installed": "已安裝"
