[bugfix-623] removed maps.map-specificities.ranked and used maps.map-leaderboard.Ranked

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -884,14 +884,13 @@
         },
         "map-specificities": {
             "automapper": "KI",
-            "ranked": "Ranked",
             "curated": "Curated",
             "verified": "Verifiziert",
             "fullSpread": "Full Spread"
         },
         "map-leaderboard": {
             "All": "Alle",
-            "Ranked": "Eingestuft",
+            "Ranked": "Ranked",
             "BeatLeader": "BeatLeader",
             "ScoreSaber": "ScoreSaber"
         },
