--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -885,14 +885,13 @@
         },
         "map-specificities": {
             "automapper": "IA",
-            "ranked": "classée",
             "curated": "recommandée",
             "verified": "vérifiée",
             "fullSpread": "panel complet"
         },
         "map-leaderboard": {
             "All": "Tout",
-            "Ranked": "Classé",
+            "Ranked": "Classée",
             "BeatLeader": "BeatLeader",
             "ScoreSaber": "ScoreSaber"
         },
